--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "plasmo": "0.84.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-tooltip": "^5.25.0",
     "tailwindcss": "3.3.5"
   },
   "devDependencies": {
@@ -28,6 +29,24 @@
   "manifest": {
     "host_permissions": [
       "https://*/*"
+    ],
+    "permissions": [
+      "storage",
+      "declarativeContent",
+      "activeTab",
+      "scripting",
+      "tabs"
+    ],
+    "content_scripts": [
+      {
+        "matches": [
+          "https://*/*"
+        ],
+        "js": [
+          "../src/content.js"
+        ],
+        "run_at": "document_end"
+      }
     ]
   }
 }
