--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "plasmo": "0.84.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "react-tooltip": "^5.25.0",
     "tailwindcss": "3.3.5"
   },
