--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "plasmo": "0.84.0",
     "react": "18.2.0",
+    "react-best-gradient-color-picker": "^2.3.5",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
+    "react-select": "^5.8.0",
     "react-tooltip": "^5.25.0",
     "tailwindcss": "3.3.5"
   },
