--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-best-gradient-color-picker": "^2.3.5",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-select": "^5.8.0",
+    "react-switch": "^7.0.0",
     "react-tooltip": "^5.25.0",
     "tailwindcss": "3.3.5"
   },
